# winch

./: README.org  pyproject.toml
doc/: cvmfs.org  ghcr.org  issues.org  lblpwgtools-fds-dev.org  multiconfig.org  notes.org  sketch.dot  spng.org  wct.org
example/: a.toml  alma.toml  b.toml  contrived.toml  cvmfs.toml  fd3.toml  lblpwgtools-fds-dev.toml  spng.toml  wct.toml
src/winch/: cli.py  config.py  graph.py  podman.py  util.py  viz.py
tests/: test_podman.py  test_util.py
